# catchem

./: .env.example  .gitignore  .mailmap  CITATION.cff  CONTRIBUTING.md  DISCOVERIES.md  INSTALL.md  Makefile  ORIGINAL_REQUEST.md  PROJECT.md  README.md  pyproject.toml
.agent/workflows/: ralphloop.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
configs/: catchem.yaml  fusion.yaml  source_of_truth.yaml  symbols.yaml  taxonomy.yaml
desktop/catchem/: README.md
desktop/catchem/scripts/: build_catchem_dev.sh  build_catchem_release.sh  build_sidecar.sh  inject_info_plist.sh  install_catchem.sh  make_dmg.sh  verify_catchem_bundle.sh
desktop/catchem/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
desktop/catchem/src-tauri/capabilities/: default.json
desktop/catchem/src-tauri/icons/: icon.icns
desktop/catchem/src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  paths.rs  security.rs  sidecar.rs  state.rs
desktop/catchem/web/: boot.js  boot.test.js  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  CATCHEM_APP.md  CATCHEM_ARCHITECTURE.md  CATCHEM_BUILD_MATRIX.md  CATCHEM_HARDENING.md  CATCHEM_RELEASE.md  CI.md  FRONTEND_ARCHITECTURE.md  KEYBOARD_SHORTCUTS.md  ML_FALLBACK.md  RUNBOOK.md  SOURCE_OF_TRUTH.md  SYSTEM_OVERVIEW.md  TEST_MATRIX.md  UI_HARDENING.md  UI_OVERVIEW.md
docs/examples/: news_fed.txt  news_nvidia_earnings.txt  news_oil_supply_shock.txt  non_finance_control.txt  stale_market_holiday.txt
docs/examples/financial-impact-records/: README.md  equity_earnings_positive.json  macro_rates_negative.json  non_finance_control.json
docs/templates/: README.md  ci.yml.template
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/coverage/: index.html
frontend/coverage/app/: App.tsx.html  index.html
frontend/coverage/charts/: EChart.tsx.html  index.html
frontend/coverage/components/: AnalysisSummary.tsx.html  AppErrorBoundary.tsx.html  CommandPalette.tsx.html  DropZone.tsx.html  ExportMenu.tsx.html  HelpDrawer.tsx.html  Icon.tsx.html  JargonTooltip.tsx.html  LiveDot.tsx.html  NotificationCenter.tsx.html  OnboardingModal.tsx.html  Pill.tsx.html  RouteErrorBoundary.tsx.html  SearchPalette.tsx.html  ShortcutOverlay.tsx.html  SidecarBanner.tsx.html  SignalExplainer.tsx.html  Skeleton.tsx.html  Sparkline.tsx.html  StartupStatus.tsx.html  StatusBanner.tsx.html  ToastTray.tsx.html  index.html
frontend/coverage/hooks/: index.html  useAccent.ts.html  useDesktopAlerts.ts.html  useLiveStream.ts.html  useSidecarHealth.ts.html  useStreamingLiveRead.ts.html  useTauriMenu.ts.html  useTheme.ts.html  useUrlFilters.ts.html
frontend/coverage/layout/: Shell.tsx.html  index.html
frontend/coverage/lib/: api.ts.html  feedMerge.ts.html  freshness.ts.html  guardState.ts.html  i18n.ts.html  index.html  jargon.ts.html  nav-shortcuts.ts.html  page-help.ts.html  searchSaved.ts.html  snapshot.ts.html
frontend/coverage/types/: api.ts.html  index.html
frontend/scripts/: check-bundle-budget.js  run-vitest.mjs
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/charts/: EChart.tsx
frontend/src/components/: AnalysisSummary.tsx  AppErrorBoundary.tsx  CommandPalette.tsx  DropZone.tsx  ExportMenu.tsx  HelpDrawer.tsx  Icon.tsx  JargonTooltip.tsx  LiveDot.tsx  NotificationCenter.tsx  OnboardingModal.tsx  Pill.tsx  RouteErrorBoundary.tsx  SearchPalette.tsx  ShortcutOverlay.tsx  SidecarBanner.tsx  SignalExplainer.tsx  Skeleton.tsx  Sparkline.tsx  StartupStatus.tsx  StatusBanner.tsx  ToastTray.tsx
frontend/src/context/: overlayCoordinator.ts
frontend/src/hooks/: useAccent.ts  useDesktopAlerts.ts  (+6 more)
scripts/: catchem_bootstrap_and_run.sh  catchem_watcher.py  demo_paste_news.sh  download_kaggle_assets.sh  download_optional_kaggle_assets.sh  fusion_bootstrap_and_run.sh  replay_awareness_jsonl.sh  verify_newsimpact_guard.py  warm_hf_models.py
src/catchem/: __init__.py  __main__.py  api.py  archive.py  awareness_gaps.py  awareness_reader.py  awareness_replay.py  backtest.py  bootstrap.py  channel_mapper.py  chart_context.py  cli.py  contracts.py  dashboard_data.py  demo.py  embeddings.py  entity_linker.py  evidence.py  finance_filter.py  golden.py  logging.py  market_data.py  migrations.py  news_poller.py  newsimpact_guarded_adapter.py  portfolio.py  rate_limit.py  redaction.py  reranker.py  runtime_metrics.py  schemas.py  scoring.py  sentiment.py  service.py  settings.py  static_assets.py  storage.py  supervisor.py  symbol_mapper.py  taxonomy.py  (+4 more)
src/fusion_stack/: __init__.py  api.py  archive.py  awareness_reader.py  awareness_replay.py  bootstrap.py  channel_mapper.py  chart_context.py  cli.py  contracts.py  demo.py  entity_linker.py  evidence.py  finance_filter.py  golden.py  news_poller.py  newsimpact_guarded_adapter.py  redaction.py  reranker.py  schemas.py  sentiment.py  service.py  settings.py  static_assets.py  storage.py  supervisor.py  symbol_mapper.py  taxonomy.py  zero_shot_classifier.py
tests/: conftest.py  test_api_coverage_gaps.py  test_api_coverage_gaps_more.py  test_api_docs.py  test_api_quant_reviews.py  test_archive.py  test_archive_concurrency.py  test_arrival_heatmap.py  test_assemble_feeds_dedup.py  test_awareness_endpoint.py  test_awareness_gaps.py  test_awareness_post_commit_consumption.py  test_awareness_reader.py  test_awareness_replay.py  test_backtest.py  test_bootstrap.py  test_bughunt_B_embed_archive.py  test_bughunt_C_news_poller.py  test_bughunt_D_api.py  test_bughunt_E_text_reviewers.py  test_bughunt_F_net.py  test_bughunt_G_quant.py  test_bughunt_H_config.py  test_bughunt_r2_RA_api.py  test_bughunt_r2_RC_nan_tz.py  test_bughunt_r2_RD_ingest.py  test_bughunt_r3_SA_backend.py  test_bughunt_r3_SB_newssrc.py  test_bughunt_r4_backend.py  test_bughunt_r5.py  test_bughunt_storage_quant.py  test_catchem_endpoints.py  test_channel_mapper.py  test_chart_context.py  test_circuit_breaker.py  test_cli.py  test_cli_awareness.py  test_cli_coverage.py  test_cli_coverage_gaps.py  test_cli_coverage_gaps_more.py  (+135 more)
(+218 files in other folders)
