[project]
name = "fusion_stack"
version = "0.1.0"
description = "Sidecar workspace that fuses Awareness ingestion with a guarded finance-relevance layer. NewsImpact is consumed in read-only diagnostic mode only."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nazmi" }]
readme = "README.md"

dependencies = [
  # config / schemas
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "PyYAML>=6.0.1",
  "orjson>=3.10",
  # web / cli
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "typer>=0.12",
  "httpx>=0.27",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.9",        # /ui/demo/upload file-upload endpoint
  # data / numerics
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "scikit-learn>=1.4",
  "rapidfuzz>=3.9",
  "xxhash>=3.4",
  # text / language
  "langdetect>=1.0.9",
  # obs
  "structlog>=24.1",
  # awareness (editable install handled by bootstrap)
]

[project.optional-dependencies]
ml = [
  # heavy ML — bootstrap installs these when --with-ml is set
  "torch>=2.2",
  "transformers>=4.41",
  "sentence-transformers>=3.0",
  "safetensors>=0.4",
  "huggingface_hub>=0.23",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "build>=1.2",         # wheel canary in tests/test_static_dashboard_packaged_install.py
]

[project.scripts]
fusion-stack = "fusion_stack.cli:app"
fusion-stack-api = "fusion_stack.api:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion_stack"]
# Static files (dashboard.html, the built SPA bundle) are part of the package,
# not "shared data". They must land alongside fusion_stack/ inside the wheel so
# importlib.resources can find them in a clean install.
force-include = { "src/fusion_stack/static" = "fusion_stack/static" }

[tool.hatch.build.targets.sdist]
include = ["src/fusion_stack/static/**/*", "scripts/**/*", "configs/**/*", "docs/**/*", "tests/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
  "guard: NewsImpact safety guard tests — never skip silently",
  "smoke: end-to-end smoke that exercises the bootstrap path",
  "integration: tests that touch durable storage or external repos",
  "ml: tests that require the optional ML extra (transformers/torch)",
  "regression: source-repo regression-safety tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
