[project]
name = "catchem"
version = "0.1.1"
description = "Sidecar workspace that fuses Awareness ingestion with a guarded finance-relevance layer. NewsImpact is consumed in read-only diagnostic mode only."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nazmi" }]
readme = "README.md"

dependencies = [
  # config / schemas
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "PyYAML>=6.0.1",
  "orjson>=3.10",
  # web / cli
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "typer>=0.12",
  "httpx>=0.27",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.9",        # /ui/demo/upload file-upload endpoint
  # data / numerics
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "scikit-learn>=1.4",
  "rapidfuzz>=3.9",
  "xxhash>=3.4",
  # text / language
  "langdetect>=1.0.9",
  # obs
  "structlog>=24.1",
  "psutil>=5.9",                     # /api/stats process telemetry (CPU% / threads / VMS)
  # awareness (editable install handled by bootstrap)
]

[project.optional-dependencies]
ml = [
  # heavy ML — bootstrap installs these when --with-ml is set
  "torch>=2.2",
  "transformers>=4.41",
  "sentence-transformers>=3.0",
  "safetensors>=0.4",
  "huggingface_hub>=0.23",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "build>=1.2",         # wheel canary in tests/test_static_dashboard_packaged_install.py
]

[project.scripts]
catchem = "catchem.cli:app"
catchem-api = "catchem.api:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catchem"]


[tool.hatch.build.targets.sdist]
include = ["src/catchem/static/**/*", "scripts/**/*", "configs/**/*", "docs/**/*", "tests/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
  "guard: NewsImpact safety guard tests — never skip silently",
  "smoke: end-to-end smoke that exercises the bootstrap path",
  "integration: tests that touch durable storage or external repos",
  "ml: tests that require the optional ML extra (transformers/torch)",
  "regression: source-repo regression-safety tests",
]
filterwarnings = [
  # Surface DeprecationWarnings raised from inside the catchem package as
  # errors so future-removal warnings (e.g. `asyncio.get_event_loop` slated
  # for removal in Python 3.16) fail CI loudly instead of disappearing under
  # the blanket ignore below. The catch-all keeps third-party
  # DeprecationWarning noise out of the test stream.
  "error::DeprecationWarning:catchem",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/catchem"]
branch = true
omit = [
  "*/tests/*",
  "*/static/*",
  "src/catchem/__main__.py",
]

[tool.coverage.report]
skip_covered = false
show_missing = false
precision = 2
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
