[package]
name = "catchem"
version = "0.1.0"
edition = "2021"
description = "Catchem — macOS desktop wrapper for catchem"
authors = ["nazmi"]
license = "MIT"
publish = false
rust-version = "1.77"

[lib]
name = "catchem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
# Plugins that USED to be registered (shell, dialog, fs, notification, opener,
# process) were removed in commit-after-capabilities-narrowing. JS has zero
# `@tauri-apps/api` imports anywhere in `frontend/` or `desktop/catchem/web/`
# so the only effect of keeping them was build time + binary bloat. If a
# future feature needs one back, add BOTH the Cargo dep AND the matching
# capability permission in `capabilities/default.json` — capabilities is
# default-deny, the explicit grant is required.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
env_logger = "0.11"
# `open` is used directly by `commands::open_external` + the on_navigation
# handler in lib.rs to hand external URLs to the system browser. We don't
# use `tauri-plugin-opener` because that exposes IPC commands to the
# webview — `open::that_detached` is Rust-only and never crosses the
# trust boundary.
open = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
